(JS) update tabTooltipNavButtons.uc.js to 1.2.3 (CSS) fix an issue with menulist menupopups being clipped. adjust panel body clip box to content-box so content will be visually constrained 4px from panel edges.

--- a/resources/in-content/menus.css
+++ b/resources/in-content/menus.css
@@ -96,7 +96,7 @@ menupopup.in-menulist {
   background-color: transparent !important;
   border-radius: var(--menupopup-border-radius) !important;
   margin: var(--menupopup-margin) !important;
-  overflow: hidden !important;
+  /* overflow: hidden !important; */
   color: var(--menu-color) !important;
   background-image: unset !important;
   padding: var(--menupopup-padding) !important;
